<resources>
    <string name="app_name">TravelTales</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="google_maps_key" translatable="false">AIzaSyDxmMUkArQLrSwXJweLr8OuvheQkaG_8Gs</string>
    <string name="title_activity_selected_photo">Selected Photos</string>
    <string name="title_activity_write_description">Write Description</string>
    <string name="title_add_post_confirmation">Confirm Post</string>
    <string name="action_done">Done</string>
    <string name="action_next">Next</string>
    <string name="dialog_discard_edit">Discard edit?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>